# simple_futures

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: lints.yml  test.yml
src/: atomic_state.rs  complete_future.rs  lib.rs  race_future.rs  value_future.rs
